Button on ios width fix

--- a/site/components/button/style.css
+++ b/site/components/button/style.css
@@ -7,7 +7,7 @@
   border: none;
   composes: sansSerif from "../../css/typography/_fonts.css";
 	composes: fontM from "../../css/typography/_fonts.css";
-  width: 230px;
+  width: 280px;
   height: 60px;
   font-weight: 900;
 }
